--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-mysql-session": "^2.1.8",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "uuidv4": "^6.2.13"
   }
 }
