--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.23.1",
     "uuidv4": "^6.2.13"
