--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.1",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
